--- a/index.html
+++ b/index.html
@@ -1,27 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <link rel="stylesheet" type="text/css" href="./index.css" >
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
+
 <body>
+    <canvas id="canvas" class="canvas"></canvas>
 
-    <div class="home">
-        <canvas id="canvas" class="home-canvas"></canvas>
-    </div>
-    
+    <!-- Home Section -->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-3 home">
+                <div class="d-flex justify-content-center align-items-center name-plate">
+                    <div class="">
+                        <h1>David Lee</h1>
+                        <hr class="name-separator">
+                        <h2>Computer Engineer</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <div class="footer">
-        <a>Email</a>
-        <a>GitHub</a>
-        <a>LinkedIn</a>
-        <a>LastFM</a>
-        <a>Thingiverse</a>
+
+        <!-- TODO: Remove this -->
+        <div id="temperino" class="home">
+        </div>
+
+
+        <!-- Footer -->
+        <div class="footer">
+            <a>Email</a>
+            <a>GitHub</a>
+            <a>LinkedIn</a>
+            <a>LastFM</a>
+            <a>Thingiverse</a>
+        </div>
+
     </div>
+
+
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 </body>
+
 </html>
