playing with canvas clickablility and footer

--- a/index.html
+++ b/index.html
@@ -36,14 +36,35 @@
 
 
         <!-- Footer -->
-        <div class="footer">
-            <a>Email</a>
-            <a>GitHub</a>
-            <a>LinkedIn</a>
-            <a>LastFM</a>
-            <a>Thingiverse</a>
+        <div class="col-sm-12">
+            <div class="row footer">
+                <div class="footer-link footer-email">
+                    <a>
+                        <i class="far fa-3x fa-envelope"></i>
+                    </a>
+                </div>
+                <div class="footer-link footer-github">
+                    <a>
+                        <i class="fab fa-3x fa-github"></i>
+                    </a>
+                </div>
+                <div class="footer-link footer-linkedin">
+                    <a>
+                        <i class="fab fa-3x fa-linkedin"></i>
+                    </a>
+                </div>
+                <div class="footer-link footer-lastfm">
+                    <a>
+                        <i class="fab fa-3x fa-lastfm"></i>
+                    </a>
+                </div>
+                <div class="footer-link footer-thingiverse">
+                    <a>
+                        <i class="fas fa-3x fa-cube"></i>
+                    </a>
+                </div>
+            </div>
         </div>
-
     </div>
 
 
@@ -57,6 +78,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/b6d357028f.js" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 </body>
 
