cleaning up a few things

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <!-- Navbar -->
     <nav class="navbar">
         <ul>
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#About">About</a></li>
-            <li><a href="#Work">Work</a></li>
-            <li><a href="#Projects">Projects</a></li>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
             <!-- Disabled by default -->
-            <li class="right"><i id="rain-toggle" class="fas fa-tint-slash"></i></li>
+            <li class="right"><a id="rain-toggle"><i id="rain-toggle-icon" class="fas fa-tint-slash"></i></a></li>
         </ul>
     </nav>
 
@@ -29,7 +29,7 @@
     <!-- Home Section -->
     <div class="container">
         <div class="row">
-            <div class="home">
+            <div id="home" class="home">
                 <!-- <div class="d-flex justify-content-center align-items-center name"> -->
                 <div class="name-plate">
                     <h1>David Lee</h1>
@@ -42,35 +42,35 @@
 
 
         <!-- TODO: Remove this -->
-        <div id="temperino" class="home">
+        <div id="about" class="home">
         </div>
 
 
         <!-- Footer -->
-        <div class="footer">
+        <div id="contact" class="footer">
             <div class="footer-link footer-email">
                 <a>
-                    <i class="far fa-3x fa-envelope"></i>
+                    <i class="far fa-2x fa-envelope"></i>
                 </a>
             </div>
             <div class="footer-link footer-github">
                 <a>
-                    <i class="fab fa-3x fa-github"></i>
+                    <i class="fab fa-2x fa-github"></i>
                 </a>
             </div>
             <div class="footer-link footer-linkedin">
                 <a>
-                    <i class="fab fa-3x fa-linkedin"></i>
+                    <i class="fab fa-2x fa-linkedin"></i>
                 </a>
             </div>
             <div class="footer-link footer-lastfm">
                 <a>
-                    <i class="fab fa-3x fa-lastfm"></i>
+                    <i class="fab fa-2x fa-lastfm"></i>
                 </a>
             </div>
             <div class="footer-link footer-thingiverse">
                 <a>
-                    <i class="fas fa-3x fa-cube"></i>
+                    <i class="fas fa-2x fa-cube"></i>
                 </a>
             </div>
         </div>
