basic about section

--- a/index.html
+++ b/index.html
@@ -40,9 +40,24 @@
             </div>
         </div>
 
-
-        <!-- TODO: Remove this -->
-        <div id="about" class="home">
+        <div id="about" class="about">
+            <!-- TODO: Rename this class? -->
+            <div class="about-blurb">
+                <p>
+                    Hello, my name is David. I'm a software developer and lover of most thing tech. Studied Computer
+                    Engineering at the University of Waterloo and am currently working in Toronto.
+                </p>
+            </div>
+            <div class="about-interests">
+                <h2>Interests</h2>
+                <div class="about-gallery">
+                    <div class="about-gallery-entry">Software</div>
+                    <div class="about-gallery-entry">Electronics</div>
+                    <div class="about-gallery-entry">Video Games</div>
+                    <div class="about-gallery-entry">3D Printing</div>
+                    <div class="about-gallery-entry">Long Walks on the beach</div>
+                </div>
+            </div>
         </div>
 
 
