--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>David Lee</title>
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="styles/index.css">
 </head>
 
 <body>
@@ -47,55 +47,85 @@
                     Hello, my name is David. I'm a software developer and lover of most thing tech. Studied Computer
                     Engineering at the University of Waterloo and am currently working in Toronto.
                 </p>
+                <ul>
+                    <li>Video games</li>
+                    <li>Software</li>
+                    <li>Keyboards</li>
+                    <li>Anime</li>
+                    <li>Mahjong</li>
+                    <li>Learning Japanese (Trying)</li>
+                    <li>3D Printing</li>
+                </ul>
             </div>
-            
-            <div class="about-interests">
-                <h2>Interests</h2>
-                <div class="about-gallery">
-                    <div class="about-gallery-entry">Software</div>
-                    <div class="about-gallery-entry">Electronics</div>
-                    <div class="about-gallery-entry">Video Games</div>
-                    <div class="about-gallery-entry">3D Printing</div>
-                    <div class="about-gallery-entry">Long Walks on the beach</div>
+
+        </div>
+
+        <div id="work" class="work">
+            <h2>Work Experience</h2>
+
+            <div class="workplace-gallery">
+
+                <div class="workplace-card">
+                    <img class="workplace-img" src="images/TTCLogo.jpg" />
+                    <h3>Toronto Transit Commision</h3>
+                </div>
+                <div class="workplace-card">
+                    <img class="workplace-img" src="images/IBILogo.jpg" />
+                    <h3>IBI Group</h3>
+                </div>
+                <div class="workplace-card">
+                    <img class="workplace-img" src="images/VeevaLogo.jpg" />
+                    <h3>Veeva Systems</h3>
+                </div>
+                <div class="workplace-card">
+                    <img class="workplace-img" src="images/AutodeskLogo.jpg" />
+                    <h3>Autodesk</h3>
+                </div>
+                <div class="workplace-card">
+                    <img class="workplace-img" src="images/GroupbyLogo.jpg" />
+                    <h3>GroupBy</h3>
                 </div>
             </div>
+        </div>
+
+        <div id="projects" class="projects">
+            <h2>Projects</h2>
+            <div class="projects-gallery">
+                <div class="projects-gallery-entry">Website</div>
+                <div class="projects-gallery-entry">Garmin Watchface</div>
+                <div class="projects-gallery-entry">3D Printing</div>
+                <div class="projects-gallery-entry">osu! Keyboard</div>
+                <div class="projects-gallery-entry">Keyboard Build log</div>
+                <div class="projects-gallery-entry">Skype status plumbob</div>
+            </div>
+
         </div>
 
 
         <!-- Footer -->
         <div id="contact" class="footer">
-            <div class="footer-link footer-email">
-                <a>
-                    <i class="far fa-2x fa-envelope"></i>
-                </a>
-            </div>
-            <div class="footer-link footer-github">
-                <a>
-                    <i class="fab fa-2x fa-github"></i>
-                </a>
-            </div>
-            <div class="footer-link footer-linkedin">
-                <a>
-                    <i class="fab fa-2x fa-linkedin"></i>
-                </a>
-            </div>
-            <div class="footer-link footer-lastfm">
-                <a>
-                    <i class="fab fa-2x fa-lastfm"></i>
-                </a>
-            </div>
-            <div class="footer-link footer-thingiverse">
-                <a>
-                    <i class="fas fa-2x fa-cube"></i>
-                </a>
-            </div>
+            <a target="_blank" href="mailto:info@djlee.xyz" class="footer-link footer-email">
+                <i class="far fa-2x fa-envelope"></i>
+            </a>
+            <a target="_blank" href="https://github.com/davidjameslee" class="footer-link footer-github">
+                <i class="fab fa-2x fa-github"></i>
+            </a>
+            <a target="_blank" href="https://www.linkedin.com/in/dj6lee/" class="footer-link footer-linkedin">
+                <i class="fab fa-2x fa-linkedin"></i>
+            </a>
+            <a target="_blank" href="https://www.last.fm/user/TheBroccOLee" class="footer-link footer-lastfm">
+                <i class="fab fa-2x fa-lastfm"></i>
+            </a>
+            <a target="_blank" href="https://www.thingiverse.com/BroccOLee" class="footer-link footer-thingiverse">
+                <i class="fas fa-2x fa-cube"></i>
+            </a>
         </div>
     </div>
 
 
     <!-- Scripts -->
     <script src="https://kit.fontawesome.com/b6d357028f.js" crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
