basic fish starting point

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="#contact">Contact</a></li>
             <!-- Disabled by default -->
             <li class="right"><a id="rain-toggle"><i id="rain-toggle-icon" class="fas fa-tint-slash"></i></a></li>
+            <li class="right"><a id="fish-toggle"><i id="fish-toggle-icon" class="fas fa-fish"></i></a></li>
         </ul>
     </nav>
 
