Moving onto testing work experience gallery

--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
         <div id="about" class="about">
             <!-- TODO: Rename this class? -->
             <div class="about-blurb">
+                <div class="section-header">
+                    <h1>About Me</h1>
+                    <hr class="section-separator">
+                </div>
                 <img class="about-image" src="./images/thinking.png" />
                 <div class="about-text">
-                    <h2>About</h2>
-                    <hr class="name-separator">
                     Hello, my name is David. I'm a software developer and lover of most thing tech. Studied Computer
                     Engineering at the University of Waterloo and am currently working in Toronto.
                     <ul>
@@ -96,29 +98,32 @@
         </div>
 
         <div id="work" class="work">
-            <h2>Work Experience</h2>
+            <div class="section-header">
+                <h1>Work Experience</h1>
+                <hr class="section-separator">
+            </div>
 
             <div class="workplace-gallery">
 
-                <div class="workplace-card">
+                <div class="workplace-card" data-company="Toronto Transit Commission" data-title="Software Engineer (temp)">
                     <img class="workplace-img" src="images/TTCLogo.jpg" />
-                    <h3>Toronto Transit Commision</h3>
+                    <!-- <h3>Toronto Transit Commision</h3> -->
                 </div>
-                <div class="workplace-card">
+                <div class="workplace-card" data-company="IBI Group" data-title="Software Engineer (temp)" >
                     <img class="workplace-img" src="images/IBILogo.jpg" />
-                    <h3>IBI Group</h3>
+                    <!-- <h3>IBI Group</h3> -->
                 </div>
-                <div class="workplace-card">
+                <div class="workplace-card" data-company="Veeva Systems" data-title="Software Engineer (temp)">
                     <img class="workplace-img" src="images/VeevaLogo.jpg" />
-                    <h3>Veeva Systems</h3>
+                    <!-- <h3>Veeva Systems</h3> -->
                 </div>
-                <div class="workplace-card">
+                <div class="workplace-card" data-company="Autodesk" data-title="Software Engineer (temp)">
                     <img class="workplace-img" src="images/AutodeskLogo.jpg" />
-                    <h3>Autodesk</h3>
+                    <!-- <h3>Autodesk</h3> -->
                 </div>
-                <div class="workplace-card">
+                <div class="workplace-card" data-company="GroupBy" data-title="Software Engineer (temp)">
                     <img class="workplace-img" src="images/GroupbyLogo.jpg" />
-                    <h3>GroupBy</h3>
+                    <!-- <h3>GroupBy</h3> -->
                 </div>
             </div>
         </div>
