home down button and clean up ripple double colour

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <!-- Navbar -->
     <nav class="navbar">
         <ul>
-            <li><a href="#home">Home</a></li>
+            <!-- <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#work">Work</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#interests">Interests</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact">Contact</a></li> -->
             <!-- Disabled by default -->
-            <li class="right"><a id="rain-toggle"><i id="rain-toggle-icon" class="fas fa-tint-slash"></i></a></li>
-            <li class="right"><a id="moon-toggle"><i id="moon-toggle-icon" class="fas fa-moon"></i></a></li>
+            <li class="right"><a id="rain-toggle"><i id="rain-toggle-icon" class="fas fa-tint-slash" tabindex="0"></i></a></li>
+            <li class="right"><a id="moon-toggle"><i id="moon-toggle-icon" class="fas fa-moon" tabindex="0"></i></a></li>
         </ul>
     </nav>
 
@@ -60,9 +60,7 @@
                 <h2>Computer Engineer</h2>
             </div>
 
-            <!-- <div class="home-down-div"> -->
-            <i id="home-down-button" class="fas fa-chevron-circle-down home-down-button"></i>
-            <!-- </div> -->
+            <i id="home-down-button" class="fas fa-chevron-circle-down home-down-button" tabindex="0"></i>
         </div>
 
         <div id="about" class="about">
