temp gallery images

--- a/index.html
+++ b/index.html
@@ -15,15 +15,10 @@
     <!-- Navbar -->
     <nav class="navbar">
         <ul>
-            <!-- <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#interests">Interests</a></li>
-            <li><a href="#contact">Contact</a></li> -->
-            <!-- Disabled by default -->
-            <li class="right"><a id="rain-toggle"><i id="rain-toggle-icon" class="fas fa-tint-slash" tabindex="0"></i></a></li>
-            <li class="right"><a id="moon-toggle"><i id="moon-toggle-icon" class="fas fa-moon" tabindex="0"></i></a></li>
+            <li class="right"><a id="rain-toggle"><i id="rain-toggle-icon" class="fas fa-tint-slash"
+                        tabindex="0"></i></a></li>
+            <li class="right"><a id="moon-toggle"><i id="moon-toggle-icon" class="fas fa-moon" tabindex="0"></i></a>
+            </li>
         </ul>
     </nav>
 
@@ -98,34 +93,52 @@
 
                 <div class="workplace-card" data-company="Toronto Transit Commission"
                     data-title="Software Engineer (temp)">
-                    <img class="workplace-img" src="images/TTCLogo.jpg" />
-                    <!-- <h3>Toronto Transit Commision</h3> -->
+                    <img src="images/TTCLogo.jpg" />
+                    <div>
+                        <h3>Toronto Transit Commision</h3>
+                        <h4>Developer</h4>
+                    </div>
                 </div>
                 <div class="workplace-card" data-company="IBI Group" data-title="Software Engineer (temp)">
-                    <img class="workplace-img" src="images/IBILogo.jpg" />
-                    <!-- <h3>IBI Group</h3> -->
+                    <img src="images/IBILogo.jpg" />
+                    <div>
+                        <h3>IBI Group</h3>
+                        <h4>Junior Developer</h4>
+                    </div>
                 </div>
                 <div class="workplace-card" data-company="Veeva Systems" data-title="Software Engineer (temp)">
-                    <img class="workplace-img" src="images/VeevaLogo.jpg" />
-                    <!-- <h3>Veeva Systems</h3> -->
+                    <img src="images/VeevaLogo.jpg" />
+                    <div>
+                        <h3>Veeva Systems</h3>
+                        <h4>Intern Performance Engineer</h4>
+                    </div>
                 </div>
                 <div class="workplace-card" data-company="Autodesk" data-title="Software Engineer (temp)">
-                    <img class="workplace-img" src="images/AutodeskLogo.jpg" />
-                    <!-- <h3>Autodesk</h3> -->
+                    <img src="images/AutodeskLogo.jpg" />
+                    <div>
+                        <h3>Autodesk</h3>
+                        <h4>Software Developer</h4>
+                    </div>
                 </div>
                 <div class="workplace-card" data-company="GroupBy" data-title="Software Engineer (temp)">
-                    <img class="workplace-img" src="images/GroupbyLogo.jpg" />
-                    <!-- <h3>GroupBy</h3> -->
+                    <img src="images/GroupbyLogo.jpg" />
+                    <div>
+                        <h3>GroupBy</h3>
+                        <h4>Software Engineer</h4>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div id="projects" class="projects">
-            <h2>Projects</h2>
+            <div class="section-header">
+                <h1>Projects</h1>
+                <hr class="section-separator">
+            </div>
             <div class="projects-gallery">
                 <div class="projects-gallery-entry">Website</div>
-                <div class="projects-gallery-entry">Garmin Watchface</div>
-                <div class="projects-gallery-entry">osu! Keyboard</div>
+                <div class="projects-gallery-entry project-watchface">Garmin Watchface</div>
+                <div class="projects-gallery-entry project-osu-keyboard">osu! Keyboard</div>
                 <div class="projects-gallery-entry">Skype status plumbob</div>
             </div>
 
@@ -133,8 +146,8 @@
         <div id="interests" class="interests">
             <h2>Projects</h2>
             <div class="interests-gallery">
-                <div class="interests-gallery-entry">3D Printing</div>
-                <div class="interests-gallery-entry">Keyboard Build log</div>
+                <div class="interests-gallery-entry interests-3d-model">3D Printing</div>
+                <div class="interests-gallery-entry interests-keyboard-entry">Keyboard Build log</div>
             </div>
 
         </div>
