moving around gallery

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div id="projects" class="projects">
             <div class="section-header">
-                <h1>Projects</h1>
+                <h1>Projects  /Interests</h1>
                 <hr class="section-separator">
             </div>
             <div class="projects-gallery">
@@ -140,14 +140,8 @@
                 <div class="projects-gallery-entry project-watchface">Garmin Watchface</div>
                 <div class="projects-gallery-entry project-osu-keyboard">osu! Keyboard</div>
                 <div class="projects-gallery-entry">Skype status plumbob</div>
-            </div>
-
-        </div>
-        <div id="interests" class="interests">
-            <h2>Projects</h2>
-            <div class="interests-gallery">
-                <div class="interests-gallery-entry interests-3d-model">3D Printing</div>
-                <div class="interests-gallery-entry interests-keyboard-entry">Keyboard Build log</div>
+                <div class="projects-gallery-entry projects-3d-model">3D Printing</div>
+                <div class="projects-gallery-entry projects-keyboard-entry">Keyboard Build log</div>
             </div>
 
         </div>
@@ -155,21 +149,28 @@
 
         <!-- Footer -->
         <div id="contact" class="footer">
-            <a target="_blank" href="mailto:info@djlee.xyz" class="footer-link footer-email">
-                <i class="far fa-2x fa-envelope"></i>
-            </a>
-            <a target="_blank" href="https://github.com/davidjameslee" class="footer-link footer-github">
-                <i class="fab fa-2x fa-github"></i>
-            </a>
-            <a target="_blank" href="https://www.linkedin.com/in/dj6lee/" class="footer-link footer-linkedin">
-                <i class="fab fa-2x fa-linkedin"></i>
-            </a>
-            <a target="_blank" href="https://www.last.fm/user/TheBroccOLee" class="footer-link footer-lastfm">
-                <i class="fab fa-2x fa-lastfm"></i>
-            </a>
-            <a target="_blank" href="https://www.thingiverse.com/BroccOLee" class="footer-link footer-thingiverse">
-                <i class="fas fa-2x fa-cube"></i>
-            </a>
+            <div class="footer-message">
+                <div>
+                    Thanks for stopping by!
+                </div>
+            </div>
+            <div class="contact">
+                <a target="_blank" href="mailto:info@djlee.xyz" class="contact-link contact-email">
+                    <i class="far fa-2x fa-envelope"></i>
+                </a>
+                <a target="_blank" href="https://github.com/davidjameslee" class="contact-link contact-github">
+                    <i class="fab fa-2x fa-github"></i>
+                </a>
+                <a target="_blank" href="https://www.linkedin.com/in/dj6lee/" class="contact-link contact-linkedin">
+                    <i class="fab fa-2x fa-linkedin"></i>
+                </a>
+                <a target="_blank" href="https://www.last.fm/user/TheBroccOLee" class="contact-link contact-lastfm">
+                    <i class="fab fa-2x fa-lastfm"></i>
+                </a>
+                <a target="_blank" href="https://www.thingiverse.com/BroccOLee" class="contact-link contact-thingiverse">
+                    <i class="fas fa-2x fa-cube"></i>
+                </a>
+            </div>
         </div>
     </div>
 
