cleanup some stuff

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>David Lee</title>
     <link rel="stylesheet" type="text/css" href="styles/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,9 +16,8 @@
     <!-- Navbar -->
     <nav class="navbar">
         <ul>
-            <li class="right"><a id="rain-toggle"><i id="rain-toggle-icon" class="fas fa-tint-slash"
-                        tabindex="0"></i></a></li>
-            <li class="right"><a id="moon-toggle"><i id="moon-toggle-icon" class="fas fa-moon" tabindex="0"></i></a>
+            <li><a id="rain-toggle"><i id="rain-toggle-icon" class="fas fa-tint-slash" tabindex="0"></i></a></li>
+            <li><a id="moon-toggle"><i id="moon-toggle-icon" class="fas fa-moon" tabindex="0"></i></a>
             </li>
         </ul>
     </nav>
@@ -30,7 +30,7 @@
             <svg id="home-svg" class="home-svg">
 
                 <g id="moon-group">
-                    <circle id="moon" class="moon" cx="50%" cy="25%" r="10%" fill="#f6a950" />
+                    <circle id="moon" class="moon" cx="50%" cy="25%" r="10%" fill="#FFFFFF" />
                     <circle id="moon-overlay-circle" cx="50%" cy="25%" r="10%" fill="#0c0c0c" style="display: none;" />
                     <rect id="moon-overlay-rectangle" fill="#0c0c0c" style="display: none;" />
                 </g>
@@ -62,12 +62,11 @@
             <!-- TODO: Rename this class? -->
             <div class="about-blurb">
                 <div class="section-header">
-                    <h1>About Me</h1>
+                    <h1>Well hello there</h1>
                     <hr class="section-separator">
                 </div>
-                <img class="about-image" src="./images/thinking.png" />
                 <div class="about-text">
-                    Hello, my name is David. I'm a software developer and lover of most thing tech. Studied Computer
+                    My name is David. I'm a software developer and lover of most thing tech. Studied Computer
                     Engineering at the University of Waterloo and am currently working in Toronto.
                     <ul>
                         <li>Video games</li>
@@ -139,7 +138,6 @@
                 <div class="projects-gallery-entry">Website</div>
                 <div class="projects-gallery-entry project-watchface">Garmin Watchface</div>
                 <div class="projects-gallery-entry project-osu-keyboard">osu! Keyboard</div>
-                <div class="projects-gallery-entry">Skype status plumbob</div>
                 <div class="projects-gallery-entry projects-3d-model">3D Printing</div>
                 <div class="projects-gallery-entry projects-keyboard-entry">Keyboard Build log</div>
             </div>
@@ -148,13 +146,8 @@
 
 
         <!-- Footer -->
-        <div id="contact" class="footer">
-            <div class="footer-message">
-                <div>
-                    Thanks for stopping by!
-                </div>
-            </div>
-            <div class="contact">
+        <div  class="footer">
+            <div id="contact" class="contact">
                 <a target="_blank" href="mailto:info@djlee.xyz" class="contact-link contact-email">
                     <i class="far fa-2x fa-envelope"></i>
                 </a>
