--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
                 <div class="list-card">
                     <i class="fas fa-globe"></i>
                     <h3>Website</h3>
-                    <h4>Right here</h4>
+                    <h4>You're Looking at it!</h4>
                 </div>
                 <div class="list-card">
                     <i class="fas fa-clock"></i>
                     <h3>Garmin Watchface</h3>
-                    <h4>Github</h4>
+                    <h4><a target="_blank" href="https://github.com/davidjameslee/GarminWatchface">GitHub Link</a></h4>
                 </div>
                 <div class="list-card">
                     <i class="fas fa-music"></i>
@@ -132,7 +132,7 @@
                 <div class="list-card">
                     <i class="fas fa-keyboard"></i>
                     <h3>Keyboards</h3>
-                    <h4>Quefrency Link</h4>
+                    <h4>Soon™</h4>
                 </div>
             </div>
         </div>
